--- a/components/layout/layout.scss
+++ b/components/layout/layout.scss
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap");
+::selection {
+    color: #fffffe;
+    background: #ff8906;
+}
+
 
 /* Box sizing rules */
 
