--- a/components/techstack/techstack.scss
+++ b/components/techstack/techstack.scss
@@ -1,4 +1,4 @@
-.about {
+.techstack {
     font-family: Montserrat, tahoma, verdana, sans-serif;
     margin: 120px
 }
@@ -7,12 +7,6 @@
     color: #ff8906;
     font-size: 2.2rem;
     display: block;
-}
-
-.mouse {
-    position: absolute;
-    left: 50%;
-    bottom: 15%;
 }
 
 .body {
