--- a/components/about/techstack.scss
+++ b/components/about/techstack.scss
@@ -15,13 +15,13 @@
 
 .container {
     margin: 3%;
-    color: #f25f4c;
+    color: #a7a9be;
     display: flex;
     flex-direction: column;
-    .row:nth-child(1) {
+    .row-stack:nth-child(1) {
         margin-top: 5%;
     }
-    .row {
+    .row-stack {
         display: flex;
         flex-direction: column;
         margin-bottom: 5%;
@@ -32,5 +32,6 @@
     }
     .logos {
         font-size: 5rem;
+        display: flex;
     }
 }
