--- a/components/projects/test1/test1.scss
+++ b/components/projects/test1/test1.scss
@@ -3,12 +3,19 @@
     margin: 120px
 }
 
+
 .heading {
     color: #ff8906;
-    font-size: 2.2rem;
+    font-size: 2.5rem;
     display: block;
 }
 
-.body {
-    color: #a7a9be;
+.small-desc {
+    font-style: italic;
+    color: #fffffe;
+    font-size: 1.4rem;
+}
+
+sup{
+    font-size: 1rem;
 }
