projects bg image1

--- a/components/projects/projects.scss
+++ b/components/projects/projects.scss
@@ -1,14 +1,20 @@
 .projects {
-    font-family: Montserrat, tahoma, verdana, sans-serif;
-    margin: 120px
+  font-family: Montserrat, tahoma, verdana, sans-serif;
+  margin: 120px;
 }
 
 .heading {
-    color: #ff8906;
-    font-size: 2.2rem;
-    display: block;
+  color: #ff8906;
+  font-size: 2.2rem;
+  display: block;
 }
 
 .body {
-    color: #a7a9be;
+  color: #a7a9be;
+}
+
+.projects_list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
