image transitions (project page)

--- a/components/projects/project_card/card.scss
+++ b/components/projects/project_card/card.scss
@@ -11,9 +11,10 @@
     background: transparent;
     z-index: 2;
     position: relative;
-    transition: all 0.2s ease-in-out;
+    transition: all 0.1s ease-in-out;
     &:hover {
       top: -100%;
+      filter: brightness(50%);
     }
   }
 
