--- a/components/projects/project_card/card.scss
+++ b/components/projects/project_card/card.scss
@@ -1,7 +1,18 @@
+.project_card_container {
+  overflow: hidden;
+  width: 400px;
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
+  // background: red;
+}
+.project_card_text {
+  color: white;
+  text-align: center;
+}
 .project_card {
   height: 300px;
   width: 400px;
-  border: 1px solid red;
   flex: 0 1 400px;
   margin: 1em;
   overflow: hidden;
@@ -17,7 +28,6 @@
       filter: brightness(50%);
     }
   }
-
   .back_image {
     position: relative;
     z-index: 1;
